# Web_based_rag_machine

./: .env.example  README.md  db.sqlite3  pyproject.toml  requriements.txt
app/: init_db.py  main.py
app/api/: ingest.py  query.py
app/core/: chunker.py  config.py  embeddings.py  faiss_client.py
app/db/: sqlite_store.py
app/utils/: html_parser.py
app/workers/: tasks.py
data/: data.db  faiss.index
